--- a/style.css
+++ b/style.css
@@ -147,8 +147,7 @@ span {
 }
 .spanR {
   font-size: 18;
-  color: #071d97;
-  background: #cbe5f0;
+  color: #e7e8f0;
 }
 .anchor {
   display: inline-block;
