--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,37 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+
+body {
+  margin: 0;
+  font-family: var(--bs-body-font-family);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-body-color);
+  text-align: var(--bs-body-text-align);
+  background-color: var(--bs-body-bg);
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+header {
+  display: flex;
+}
 .header {
-  width: 100%;
-  height: 100px;
-  background-color: #323280;
+  .header {
+    height: auto;
+    top: 0;
+    z-index: 1000;
+  }
 }
 
 .header__top,
@@ -12,7 +42,7 @@
   background-color: aqua;
 }
 .v2 {
-  background-color: #db4444;
+  background-color: #f3fdfd;
 }
 .v3 {
   background-color: #44db44;
@@ -22,4 +52,40 @@
 }
 .v5 {
   background-color: #323280;
+}
+.pictures {
+  margin: 20px auto;
+  padding: 5px;
+  border: 5px solid rgb(188, 204, 248);
+  width: 100%;
+}
+kbd {
+  background: var(--prcd-kbd-bg, #dcdcdc);
+  border-width: 3px 4px 5px;
+  border-style: solid;
+  border-color: var(--prcd-kbd-brdc, #cdcdcd #c9c9c9 #c0c0c0);
+  padding: 0 10px;
+  font-size: 14px;
+  color: var(--prcd-kbd-color, #333);
+  border-radius: 3px;
+  line-height: 36px;
+}
+.bi {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.125em;
+  fill: currentcolor;
+}
+
+.container {
+  gap: 20px;
+}
+.container_text {
+  margin: 20px auto;
+  inline-size: 100%;
+  padding: 30px;
+  font-size: 18px;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
