--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,81 @@ kbd {
   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
+
+/*  */
 .w3-example {
-  background-color: #ffffff;
-  border: 5px solid #ccc;
+  background-color: #e7e9eb;
   border-radius: 5px;
   padding: 0.01em 16px;
-  margin: 10px 0;
+  margin: 20px 0;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
 }
+
+.w3-code,
+.w3-codespan {
+  font-family: Consolas, Menlo, "courier new", monospace;
+  font-size: 16px;
+}
+.w3-code {
+  width: auto;
+  background-color: #fff;
+  color: #000;
+  padding: 8px 12px;
+  border-left: 4px solid #4caf50;
+  word-wrap: break-word;
+}
+
+.w3-container,
+.w3-panel {
+  padding: 0.01em 16px;
+}
+.w3-panel {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.ws-note,
+.ws-warning {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-left: -32px;
+  margin-right: -32px;
+  padding: 16px 32px;
+}
+.ws-note,
+.ws-warning {
+  border-left: none;
+}
+.ws-note {
+  background-color: #ffffcc;
+  border-left: 6px solid #ffeb3b;
+}
+.w3-cell-row:before,
+.w3-cell-row:after,
+.w3-clear:after,
+.w3-clear:before,
+.w3-bar:before,
+.w3-bar:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.w-sidebar .w-block {
+  margin-bottom: 20px;
+  padding: 15px 15px 10px;
+  border: 1px solid var(--color-gray-medium);
+  border-radius: 5px;
+  min-width: 250px;
+  /* background-color: #fff; */
+}
+
+.w-title {
+  padding: 1rem 0;
+
+  border-bottom: 1px solid var(--color-gray-medium);
+}
+
+/*  */
 .masthead {
   position: -webkit-sticky;
   position: sticky;
@@ -99,11 +166,7 @@ kbd {
   position: absolute;
   left: -9999px;
 }
-.w-title {
-  padding: 1rem 0;
 
-  border-bottom: 1px solid var(--color-gray-medium);
-}
 #block-individual-random .w-block-content {
   text-align: center;
 }
@@ -141,15 +204,6 @@ kbd {
 .navbar.is-white .navbar-end .navbar-link.is-active {
   background-color: #f2f2f2;
   color: hsl(0deg, 0%, 4%);
-}
-
-.w-sidebar .w-block {
-  margin-bottom: 20px;
-  padding: 15px 15px 10px;
-  border: 1px solid var(--color-gray-medium);
-  border-radius: 5px;
-  min-width: 250px;
-  /* background-color: #fff; */
 }
 
 #block-css-fun,
@@ -206,3 +260,22 @@ kbd {
 .git {
   width: 40px;
 }
+
+/*  */
+.nextprev a.w3-right,
+.nextprev a.w3-left {
+  background-color: #04aa6d;
+  color: #ffffff;
+  border-color: #04aa6d;
+
+  /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
+  html {
+    box-sizing: border-box;
+  }
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+}
+/*  */
