--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 .w-block-menu a.active-trail,
 .w-block-menu a.is-active {
   margin: 0 -15px;
-  padding: 5px 5px 5px 15px;
+  padding: 1px 1px 1px 15px;
   background: var(--color-green);
   color: #fff;
   text-decoration: none;
@@ -33,6 +33,7 @@
 
 .v1 {
   background-color: aqua;
+  color: #000;
 }
 .v2 {
   background-color: #f3fdfd;
