--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ kbd {
 /*  */
 .nextprev a.w3-right,
 .nextprev a.w3-left {
-  background-color: #04aa6d;
+  background-color: aqua;
   color: #ffffff;
   border-color: #04aa6d;
 
