--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   color: #000;
 }
 .v2 {
-  background-color: #f3fdfd;
+  background-color: #32ec95;
 }
 .v3 {
   background-color: #44db44;
@@ -157,6 +157,26 @@ kbd {
   border-bottom: 1px solid var(--color-gray-medium);
 }
 
+.w3-responsive {
+  display: block;
+  overflow-x: auto;
+}
+
+table.w3-table-all,
+table.ws-table-all {
+  margin: 20px 0;
+}
+
+.ws-table-all {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  display: table;
+  border: 1px solid #ccc;
+}
+.ws-table-all tr {
+  border-bottom: 1px solid #ddd;
+}
 /*  */
 .masthead {
   position: -webkit-sticky;
@@ -280,3 +300,7 @@ kbd {
   }
 }
 /*  */
+span {
+  color: #f14040;
+  font-style: italic;
+}
