--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ table.grid td {
 }
 .w3-codespan {
   color: crimson;
-  background-color: #f1f1f1;
+  background-color: #fff;
   padding-left: 4px;
   padding-right: 4px;
   font-size: 110%;
@@ -378,4 +378,12 @@ table.grid td {
   padding-left: 4px;
   padding-right: 4px;
   font-size: 110%;
+}
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+td,
+th {
+  width: 2%;
 }
