--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,13 @@
 }
 
 .vv1 {
-  color: slategray;
+  color: rgb(8, 115, 223);
 }
 .vv2 {
-  color: #905;
+  color: rgb(66, 198, 238);
 }
 .vv3 {
-  color: #4b8;
+  color: rgb(187, 112, 68);
 }
 
 .pictures {
