--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,12 @@ pre {
   width: 100%;
 }
 .pictures1 {
-  margin: 20px auto;
   padding: 5px;
   border: 5px solid rgb(188, 204, 248);
-  width: 50%;
+  width: 70%;
+}
+.center-image {
+  text-align: center;
 }
 kbd {
   background: var(--prcd-kbd-bg, #dcdcdc);
