--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ pre {
   width: 100%;
 }
 .pictures1 {
+  margin: 10px auto;
   padding: 5px;
   border: 5px solid rgb(188, 204, 248);
   width: 70%;
